deploy: f6df096dd916fd386fb3afb41980c8c2a440f8f0

--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <title>Index &mdash; Topics in Bioinformatics 2021.08.20 documentation</title>
+  <title>Index &mdash; Topics in Bioinformatics 2021.08.22 documentation</title>
   
 
   
@@ -329,7 +329,7 @@
     @
 
       <ul>
-        <li><a href="python/numpy.html#index-17">operators</a>
+        <li><a href="python/numpy.html#index-15">operators</a>
 </li>
       </ul></li>
       <li>
@@ -367,7 +367,7 @@
     advanced indexing
 
       <ul>
-        <li><a href="python/numpy.html#index-12">numpy</a>, <a href="python/numpy.html#index-5">[1]</a>
+        <li><a href="python/numpy.html#index-10">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -383,7 +383,7 @@
     all
 
       <ul>
-        <li><a href="python/numpy.html#index-18">numpy</a>
+        <li><a href="python/numpy.html#index-16">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -397,7 +397,7 @@
     any
 
       <ul>
-        <li><a href="python/numpy.html#index-18">numpy</a>
+        <li><a href="python/numpy.html#index-16">numpy</a>
 </li>
       </ul></li>
   </ul></td>
@@ -415,7 +415,7 @@
     array comparisons
 
       <ul>
-        <li><a href="python/numpy.html#index-20">numpy</a>
+        <li><a href="python/numpy.html#index-18">numpy</a>
 </li>
       </ul></li>
       <li><a href="python/import.html#index-3">as</a>
@@ -429,7 +429,7 @@
       <li><a href="python/logic.html#index-6">assignment</a>, <a href="python/variables.html#index-1">[1]</a>
 
       <ul>
-        <li><a href="python/numpy.html#index-9">numpy</a>
+        <li><a href="python/numpy.html#index-8">numpy</a>
 </li>
       </ul></li>
       <li><a href="python/dictionaries.html#index-2">assignment unpacking</a>, <a href="python/variables.html#index-1">[1]</a>
@@ -438,7 +438,7 @@
     axis
 
       <ul>
-        <li><a href="python/numpy.html#index-13">numpy</a>
+        <li><a href="python/numpy.html#index-11">numpy</a>
 </li>
       </ul></li>
   </ul></td>
@@ -476,25 +476,18 @@
     bool array
 
       <ul>
-        <li><a href="python/numpy.html#index-11">numpy</a>, <a href="python/numpy.html#index-12">[1]</a>
+        <li><a href="python/numpy.html#index-10">numpy</a>, <a href="python/numpy.html#index-9">[1]</a>
 </li>
       </ul></li>
-      <li>
-    bool indexing
-
-      <ul>
-        <li><a href="python/numpy.html#index-5">numpy</a>
-</li>
-      </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     boolean indexing
 
       <ul>
-        <li><a href="python/numpy.html#index-12">numpy</a>
+        <li><a href="python/numpy.html#index-10">numpy</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     broadcast
 
@@ -506,7 +499,7 @@
     broadcasting
 
       <ul>
-        <li><a href="python/numpy.html#index-6">numpy</a>
+        <li><a href="python/numpy.html#index-5">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -679,7 +672,7 @@
 </li>
         <li><a href="python/logic.html#index-2">if</a>
 </li>
-        <li><a href="python/numpy.html#index-18">numpy</a>
+        <li><a href="python/numpy.html#index-16">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -716,7 +709,7 @@
     count
 
       <ul>
-        <li><a href="python/numpy.html#index-21">numpy</a>
+        <li><a href="python/numpy.html#index-19">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -897,7 +890,7 @@
     evaluation
 
       <ul>
-        <li><a href="python/numpy.html#index-10">numpy</a>
+        <li><a href="python/numpy.html#index-9">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -1188,7 +1181,7 @@
     integer indexing
 
       <ul>
-        <li><a href="python/numpy.html#index-12">numpy</a>
+        <li><a href="python/numpy.html#index-10">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -1343,7 +1336,7 @@
     logical operations
 
       <ul>
-        <li><a href="python/numpy.html#index-20">numpy</a>
+        <li><a href="python/numpy.html#index-18">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -1471,14 +1464,14 @@
     matrix multiplication
 
       <ul>
-        <li><a href="python/numpy.html#index-16">numpy</a>
+        <li><a href="python/numpy.html#index-14">numpy</a>
 </li>
       </ul></li>
       <li>
     matrix multiply
 
       <ul>
-        <li><a href="python/numpy.html#index-15">numpy</a>
+        <li><a href="python/numpy.html#index-13">numpy</a>
 </li>
       </ul></li>
   </ul></td>
@@ -1487,7 +1480,7 @@
     mean
 
       <ul>
-        <li><a href="python/numpy.html#index-14">numpy</a>
+        <li><a href="python/numpy.html#index-12">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -1497,7 +1490,7 @@
         <li><a href="version_control/index.html#index-11">version control</a>
 </li>
       </ul></li>
-      <li><a href="python/dictionaries.html#index-3">method chaining</a>, <a href="python/misc.html#index-6">[1]</a>, <a href="python/numpy.html#index-19">[2]</a>
+      <li><a href="python/dictionaries.html#index-3">method chaining</a>, <a href="python/misc.html#index-6">[1]</a>, <a href="python/numpy.html#index-17">[2]</a>
 </li>
       <li><a href="python/functions.html#index-4">methods</a>
 </li>
@@ -1623,7 +1616,7 @@
     newaxis
 
       <ul>
-        <li><a href="python/numpy.html#index-7">numpy</a>
+        <li><a href="python/numpy.html#index-6">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -1652,57 +1645,55 @@
       <li><a href="python/numpy.html#index-0">numpy</a>
 
       <ul>
-        <li><a href="python/numpy.html#index-12">advanced indexing</a>, <a href="python/numpy.html#index-5">[1]</a>
+        <li><a href="python/numpy.html#index-10">advanced indexing</a>
 </li>
-        <li><a href="python/numpy.html#index-18">all</a>
+        <li><a href="python/numpy.html#index-16">all</a>
 </li>
-        <li><a href="python/numpy.html#index-18">any</a>
+        <li><a href="python/numpy.html#index-16">any</a>
 </li>
-        <li><a href="python/numpy.html#index-20">array comparisons</a>
+        <li><a href="python/numpy.html#index-18">array comparisons</a>
 </li>
-        <li><a href="python/numpy.html#index-9">assignment</a>
+        <li><a href="python/numpy.html#index-8">assignment</a>
 </li>
-        <li><a href="python/numpy.html#index-13">axis</a>
+        <li><a href="python/numpy.html#index-11">axis</a>
 </li>
-        <li><a href="python/numpy.html#index-11">bool array</a>, <a href="python/numpy.html#index-12">[1]</a>
+        <li><a href="python/numpy.html#index-10">bool array</a>, <a href="python/numpy.html#index-9">[1]</a>
 </li>
-        <li><a href="python/numpy.html#index-5">bool indexing</a>
-</li>
-        <li><a href="python/numpy.html#index-12">boolean indexing</a>
+        <li><a href="python/numpy.html#index-10">boolean indexing</a>
 </li>
         <li><a href="python/numpy.html#index-3">broadcast</a>
 </li>
-        <li><a href="python/numpy.html#index-6">broadcasting</a>
+        <li><a href="python/numpy.html#index-5">broadcasting</a>
 </li>
-        <li><a href="python/numpy.html#index-18">conditionals</a>
+        <li><a href="python/numpy.html#index-16">conditionals</a>
 </li>
-        <li><a href="python/numpy.html#index-21">count</a>
+        <li><a href="python/numpy.html#index-19">count</a>
 </li>
-        <li><a href="python/numpy.html#index-10">evaluation</a>
+        <li><a href="python/numpy.html#index-9">evaluation</a>
 </li>
         <li><a href="python/numpy.html#index-4">indexing</a>
 </li>
-        <li><a href="python/numpy.html#index-12">integer indexing</a>
+        <li><a href="python/numpy.html#index-10">integer indexing</a>
 </li>
         <li><a href="seqcomp/information.html#index-0">log2 maths</a>
 </li>
-        <li><a href="python/numpy.html#index-20">logical operations</a>
+        <li><a href="python/numpy.html#index-18">logical operations</a>
 </li>
         <li><a href="python/numpy.html#index-1">matrix</a>
 </li>
-        <li><a href="python/numpy.html#index-16">matrix multiplication</a>
+        <li><a href="python/numpy.html#index-14">matrix multiplication</a>
 </li>
-        <li><a href="python/numpy.html#index-15">matrix multiply</a>
+        <li><a href="python/numpy.html#index-13">matrix multiply</a>
 </li>
-        <li><a href="python/numpy.html#index-14">mean</a>
+        <li><a href="python/numpy.html#index-12">mean</a>
 </li>
-        <li><a href="python/numpy.html#index-7">newaxis</a>
+        <li><a href="python/numpy.html#index-6">newaxis</a>
 </li>
         <li><a href="python/numpy.html#index-4">slicing</a>
 </li>
-        <li><a href="python/numpy.html#index-14">standard deviation</a>
+        <li><a href="python/numpy.html#index-12">standard deviation</a>
 </li>
-        <li><a href="python/numpy.html#index-8">transpose</a>
+        <li><a href="python/numpy.html#index-7">transpose</a>
 </li>
       </ul></li>
   </ul></td>
@@ -1741,7 +1732,7 @@
 </li>
         <li><a href="python/operators.html#index-0">&gt;=</a>
 </li>
-        <li><a href="python/numpy.html#index-17">@</a>
+        <li><a href="python/numpy.html#index-15">@</a>
 </li>
         <li><a href="python/operators.html#index-0">is</a>
 </li>
@@ -2107,7 +2098,7 @@
     standard deviation
 
       <ul>
-        <li><a href="python/numpy.html#index-14">numpy</a>
+        <li><a href="python/numpy.html#index-12">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -2392,7 +2383,7 @@
     transpose
 
       <ul>
-        <li><a href="python/numpy.html#index-8">numpy</a>
+        <li><a href="python/numpy.html#index-7">numpy</a>
 </li>
       </ul></li>
   </ul></td>
