--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <title>Index &mdash; Topics in Bioinformatics 2021.08.22 documentation</title>
+  <title>Index &mdash; Topics in Bioinformatics 2021.08.24 documentation</title>
   
 
   
@@ -329,7 +329,7 @@
     @
 
       <ul>
-        <li><a href="python/numpy.html#index-15">operators</a>
+        <li><a href="python/numpy.html#index-16">operators</a>
 </li>
       </ul></li>
       <li>
@@ -367,7 +367,7 @@
     advanced indexing
 
       <ul>
-        <li><a href="python/numpy.html#index-10">numpy</a>
+        <li><a href="python/numpy.html#index-11">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -383,7 +383,7 @@
     all
 
       <ul>
-        <li><a href="python/numpy.html#index-16">numpy</a>
+        <li><a href="python/numpy.html#index-17">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -397,7 +397,7 @@
     any
 
       <ul>
-        <li><a href="python/numpy.html#index-16">numpy</a>
+        <li><a href="python/numpy.html#index-17">numpy</a>
 </li>
       </ul></li>
   </ul></td>
@@ -409,13 +409,13 @@
         <li><a href="python/writing_functions.html#index-2">function</a>
 </li>
       </ul></li>
-      <li><a href="python/numpy.html#index-0">array</a>
+      <li><a href="python/numpy.html#index-1">array</a>
 </li>
       <li>
     array comparisons
 
       <ul>
-        <li><a href="python/numpy.html#index-18">numpy</a>
+        <li><a href="python/numpy.html#index-19">numpy</a>
 </li>
       </ul></li>
       <li><a href="python/import.html#index-3">as</a>
@@ -429,7 +429,7 @@
       <li><a href="python/logic.html#index-6">assignment</a>, <a href="python/variables.html#index-1">[1]</a>
 
       <ul>
-        <li><a href="python/numpy.html#index-8">numpy</a>
+        <li><a href="python/numpy.html#index-9">numpy</a>
 </li>
       </ul></li>
       <li><a href="python/dictionaries.html#index-2">assignment unpacking</a>, <a href="python/variables.html#index-1">[1]</a>
@@ -438,7 +438,7 @@
     axis
 
       <ul>
-        <li><a href="python/numpy.html#index-11">numpy</a>
+        <li><a href="python/numpy.html#index-12">numpy</a>
 </li>
       </ul></li>
   </ul></td>
@@ -476,14 +476,14 @@
     bool array
 
       <ul>
-        <li><a href="python/numpy.html#index-10">numpy</a>, <a href="python/numpy.html#index-9">[1]</a>
+        <li><a href="python/numpy.html#index-10">numpy</a>, <a href="python/numpy.html#index-11">[1]</a>
 </li>
       </ul></li>
       <li>
     boolean indexing
 
       <ul>
-        <li><a href="python/numpy.html#index-10">numpy</a>
+        <li><a href="python/numpy.html#index-11">numpy</a>
 </li>
       </ul></li>
   </ul></td>
@@ -492,14 +492,14 @@
     broadcast
 
       <ul>
-        <li><a href="python/numpy.html#index-3">numpy</a>
+        <li><a href="python/numpy.html#index-4">numpy</a>
 </li>
       </ul></li>
       <li>
     broadcasting
 
       <ul>
-        <li><a href="python/numpy.html#index-5">numpy</a>
+        <li><a href="python/numpy.html#index-6">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -672,7 +672,7 @@
 </li>
         <li><a href="python/logic.html#index-2">if</a>
 </li>
-        <li><a href="python/numpy.html#index-16">numpy</a>
+        <li><a href="python/numpy.html#index-17">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -709,7 +709,7 @@
     count
 
       <ul>
-        <li><a href="python/numpy.html#index-19">numpy</a>
+        <li><a href="python/numpy.html#index-20">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -890,7 +890,7 @@
     evaluation
 
       <ul>
-        <li><a href="python/numpy.html#index-9">numpy</a>
+        <li><a href="python/numpy.html#index-10">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -1142,11 +1142,9 @@
     indexing
 
       <ul>
-        <li><a href="python/numpy.html#index-4">numpy</a>
+        <li><a href="python/numpy.html#index-5">numpy</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     insertion
 
@@ -1154,11 +1152,20 @@
         <li><a href="molevol/mutation.html#index-0">mutation types</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     insertion deletion
 
       <ul>
         <li><a href="seqcomp/pairwise_alignment.html#index-0">indel</a>
+</li>
+      </ul></li>
+      <li>
+    install
+
+      <ul>
+        <li><a href="python/numpy.html#index-0">numpy</a>
 </li>
       </ul></li>
       <li><a href="python/functions.html#index-3">instance</a>
@@ -1181,7 +1188,7 @@
     integer indexing
 
       <ul>
-        <li><a href="python/numpy.html#index-10">numpy</a>
+        <li><a href="python/numpy.html#index-11">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -1336,7 +1343,7 @@
     logical operations
 
       <ul>
-        <li><a href="python/numpy.html#index-18">numpy</a>
+        <li><a href="python/numpy.html#index-19">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -1417,7 +1424,7 @@
         <li><a href="molevol/substitution_models.html#index-4">stationary stationarity</a>
 </li>
       </ul></li>
-      <li><a href="python/numpy.html#index-0">maths</a>
+      <li><a href="python/numpy.html#index-1">maths</a>
 
       <ul>
         <li><a href="python/start.html#index-6">%</a>
@@ -1457,21 +1464,21 @@
     matrix
 
       <ul>
-        <li><a href="python/numpy.html#index-1">numpy</a>
+        <li><a href="python/numpy.html#index-2">numpy</a>
 </li>
       </ul></li>
       <li>
     matrix multiplication
 
       <ul>
-        <li><a href="python/numpy.html#index-14">numpy</a>
+        <li><a href="python/numpy.html#index-15">numpy</a>
 </li>
       </ul></li>
       <li>
     matrix multiply
 
       <ul>
-        <li><a href="python/numpy.html#index-13">numpy</a>
+        <li><a href="python/numpy.html#index-14">numpy</a>
 </li>
       </ul></li>
   </ul></td>
@@ -1480,7 +1487,7 @@
     mean
 
       <ul>
-        <li><a href="python/numpy.html#index-12">numpy</a>
+        <li><a href="python/numpy.html#index-13">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -1490,7 +1497,7 @@
         <li><a href="version_control/index.html#index-11">version control</a>
 </li>
       </ul></li>
-      <li><a href="python/dictionaries.html#index-3">method chaining</a>, <a href="python/misc.html#index-6">[1]</a>, <a href="python/numpy.html#index-17">[2]</a>
+      <li><a href="python/dictionaries.html#index-3">method chaining</a>, <a href="python/misc.html#index-6">[1]</a>, <a href="python/numpy.html#index-18">[2]</a>
 </li>
       <li><a href="python/functions.html#index-4">methods</a>
 </li>
@@ -1616,7 +1623,7 @@
     newaxis
 
       <ul>
-        <li><a href="python/numpy.html#index-6">numpy</a>
+        <li><a href="python/numpy.html#index-7">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -1642,58 +1649,60 @@
         <li><a href="molevol/hypothesis_testing.html#index-0">nfp hypothesis testing</a>
 </li>
       </ul></li>
-      <li><a href="python/numpy.html#index-0">numpy</a>
+      <li><a href="python/numpy.html#index-1">numpy</a>
 
       <ul>
-        <li><a href="python/numpy.html#index-10">advanced indexing</a>
+        <li><a href="python/numpy.html#index-11">advanced indexing</a>
 </li>
-        <li><a href="python/numpy.html#index-16">all</a>
+        <li><a href="python/numpy.html#index-17">all</a>
 </li>
-        <li><a href="python/numpy.html#index-16">any</a>
+        <li><a href="python/numpy.html#index-17">any</a>
 </li>
-        <li><a href="python/numpy.html#index-18">array comparisons</a>
+        <li><a href="python/numpy.html#index-19">array comparisons</a>
 </li>
-        <li><a href="python/numpy.html#index-8">assignment</a>
+        <li><a href="python/numpy.html#index-9">assignment</a>
 </li>
-        <li><a href="python/numpy.html#index-11">axis</a>
+        <li><a href="python/numpy.html#index-12">axis</a>
 </li>
-        <li><a href="python/numpy.html#index-10">bool array</a>, <a href="python/numpy.html#index-9">[1]</a>
+        <li><a href="python/numpy.html#index-10">bool array</a>, <a href="python/numpy.html#index-11">[1]</a>
 </li>
-        <li><a href="python/numpy.html#index-10">boolean indexing</a>
+        <li><a href="python/numpy.html#index-11">boolean indexing</a>
 </li>
-        <li><a href="python/numpy.html#index-3">broadcast</a>
+        <li><a href="python/numpy.html#index-4">broadcast</a>
 </li>
-        <li><a href="python/numpy.html#index-5">broadcasting</a>
+        <li><a href="python/numpy.html#index-6">broadcasting</a>
 </li>
-        <li><a href="python/numpy.html#index-16">conditionals</a>
+        <li><a href="python/numpy.html#index-17">conditionals</a>
 </li>
-        <li><a href="python/numpy.html#index-19">count</a>
+        <li><a href="python/numpy.html#index-20">count</a>
 </li>
-        <li><a href="python/numpy.html#index-9">evaluation</a>
+        <li><a href="python/numpy.html#index-10">evaluation</a>
 </li>
-        <li><a href="python/numpy.html#index-4">indexing</a>
+        <li><a href="python/numpy.html#index-5">indexing</a>
 </li>
-        <li><a href="python/numpy.html#index-10">integer indexing</a>
+        <li><a href="python/numpy.html#index-0">install</a>
+</li>
+        <li><a href="python/numpy.html#index-11">integer indexing</a>
 </li>
         <li><a href="seqcomp/information.html#index-0">log2 maths</a>
 </li>
-        <li><a href="python/numpy.html#index-18">logical operations</a>
+        <li><a href="python/numpy.html#index-19">logical operations</a>
 </li>
-        <li><a href="python/numpy.html#index-1">matrix</a>
+        <li><a href="python/numpy.html#index-2">matrix</a>
 </li>
-        <li><a href="python/numpy.html#index-14">matrix multiplication</a>
+        <li><a href="python/numpy.html#index-15">matrix multiplication</a>
 </li>
-        <li><a href="python/numpy.html#index-13">matrix multiply</a>
+        <li><a href="python/numpy.html#index-14">matrix multiply</a>
 </li>
-        <li><a href="python/numpy.html#index-12">mean</a>
+        <li><a href="python/numpy.html#index-13">mean</a>
 </li>
-        <li><a href="python/numpy.html#index-6">newaxis</a>
+        <li><a href="python/numpy.html#index-7">newaxis</a>
 </li>
-        <li><a href="python/numpy.html#index-4">slicing</a>
+        <li><a href="python/numpy.html#index-5">slicing</a>
 </li>
-        <li><a href="python/numpy.html#index-12">standard deviation</a>
+        <li><a href="python/numpy.html#index-13">standard deviation</a>
 </li>
-        <li><a href="python/numpy.html#index-7">transpose</a>
+        <li><a href="python/numpy.html#index-8">transpose</a>
 </li>
       </ul></li>
   </ul></td>
@@ -1732,7 +1741,7 @@
 </li>
         <li><a href="python/operators.html#index-0">&gt;=</a>
 </li>
-        <li><a href="python/numpy.html#index-15">@</a>
+        <li><a href="python/numpy.html#index-16">@</a>
 </li>
         <li><a href="python/operators.html#index-0">is</a>
 </li>
@@ -2014,7 +2023,7 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python/numpy.html#index-2">scalar</a>
+      <li><a href="python/numpy.html#index-3">scalar</a>
 </li>
       <li>
     scatter
@@ -2077,7 +2086,7 @@
     slicing
 
       <ul>
-        <li><a href="python/numpy.html#index-4">numpy</a>
+        <li><a href="python/numpy.html#index-5">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -2098,7 +2107,7 @@
     standard deviation
 
       <ul>
-        <li><a href="python/numpy.html#index-12">numpy</a>
+        <li><a href="python/numpy.html#index-13">numpy</a>
 </li>
       </ul></li>
       <li>
@@ -2383,7 +2392,7 @@
     transpose
 
       <ul>
-        <li><a href="python/numpy.html#index-7">numpy</a>
+        <li><a href="python/numpy.html#index-8">numpy</a>
 </li>
       </ul></li>
   </ul></td>
