deploy: b13e99ed25f563768890566e3242baf50feb76f2

--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <title>Index &mdash; Topics in Bioinformatics 2021.09.01 documentation</title>
+  <title>Index &mdash; Topics in Bioinformatics 2021.09.02 documentation</title>
   
 
   
@@ -277,8 +277,6 @@
         <li><a href="python/operators.html#index-1">bitwise operators</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="seqcomp/dotplot.html#index-0">**kwargs</a>
 </li>
       <li>
@@ -288,6 +286,8 @@
         <li><a href="version_control/index.html#index-7">version control</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python/import.html#index-4">3rd party libraries</a>
 </li>
       <li>
@@ -346,8 +346,20 @@
         <li><a href="python/operators.html#index-1">bitwise operators</a>
 </li>
       </ul></li>
-      <li><a href="seqcomp/statistics.html#index-2">|Ho|</a>
+      <li>
+    |Ho|
+
+      <ul>
+        <li><a href="seqcomp/statistics.html#index-1">hypothesis testing</a>
 </li>
+      </ul></li>
+      <li>
+    |pvalue|
+
+      <ul>
+        <li><a href="seqcomp/statistics.html#index-1">hypothesis testing</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -806,7 +818,7 @@
     distribution
 
       <ul>
-        <li><a href="seqcomp/statistics.html#index-3">quantile</a>
+        <li><a href="seqcomp/statistics.html#index-2">quantile</a>
 </li>
       </ul></li>
       <li>
@@ -1075,8 +1087,6 @@
         <li><a href="python/dir_help.html#index-2">type</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     How to ask for help related to these notes
 
@@ -1084,9 +1094,16 @@
         <li><a href="contribute.html#index-0">screencasts</a>
 </li>
       </ul></li>
-      <li><a href="seqcomp/statistics.html#index-2">hypothesis testing</a>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    hypothesis testing
 
       <ul>
+        <li><a href="seqcomp/statistics.html#index-1">|Ho|</a>
+</li>
+        <li><a href="seqcomp/statistics.html#index-1">|pvalue|</a>
+</li>
         <li><a href="molevol/hypothesis_testing.html#index-0">degrees of freedom df</a>
 </li>
         <li><a href="molevol/hypothesis_testing.html#index-0">likelihood ratio LR</a>
@@ -1903,7 +1920,7 @@
     quantile
 
       <ul>
-        <li><a href="seqcomp/statistics.html#index-3">distribution</a>
+        <li><a href="seqcomp/statistics.html#index-2">distribution</a>
 </li>
       </ul></li>
   </ul></td>
@@ -1983,7 +2000,7 @@
         <li><a href="python/writing_functions.html#index-2">function</a>
 </li>
       </ul></li>
-      <li><a href="seqcomp/statistics.html#index-4">resampling statistic</a>
+      <li><a href="seqcomp/statistics.html#index-3">resampling statistic</a>
 </li>
       <li>
     reset
@@ -2141,6 +2158,9 @@
 </li>
       </ul></li>
       <li><a href="seqcomp/statistics.html#index-0">statistical distribution</a>
+</li>
+      <li>
+    statistical distributions
 
       <ul>
         <li><a href="seqcomp/statistics.html#index-1">uniform</a>
@@ -2492,7 +2512,7 @@
     uniform
 
       <ul>
-        <li><a href="seqcomp/statistics.html#index-1">statistical distribution</a>
+        <li><a href="seqcomp/statistics.html#index-1">statistical distributions</a>
 </li>
       </ul></li>
   </ul></td>
