deploy: 13aa6ffdd77b173abad1a0a10bbedd6e9de8e99d

--- a/version_control/index.html
+++ b/version_control/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>9. Introduction to version control &mdash; Topics in Bioinformatics 2021.09.27 documentation</title><link rel="stylesheet" href="../_static/css/theme.css" type="text/css" />
+  <title>9. Introduction to version control &mdash; Topics in Bioinformatics 2021.09.28 documentation</title><link rel="stylesheet" href="../_static/css/theme.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="../_static/graphviz.css" type="text/css" />
       <link rel="stylesheet" href="../_static/jupyter-sphinx.css" type="text/css" />
@@ -29,7 +29,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="10. Introduction to Testing in Python" href="../testing/index.html" />
-    <link rel="prev" title="8.11. Modelling sequence evolution" href="../cogent3/using_models.html" /> 
+    <link rel="prev" title="8.12. General purpose statistical tests using cogent3" href="../cogent3/statistical_tests.html" /> 
 </head>
 
 <body class="wy-body-for-nav"> 
@@ -351,7 +351,7 @@ $ git config --global user.email <span class="s2">&quot;YourEmail@example.com&qu
            </div>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="../cogent3/using_models.html" class="btn btn-neutral float-left" title="8.11. Modelling sequence evolution" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="../cogent3/statistical_tests.html" class="btn btn-neutral float-left" title="8.12. General purpose statistical tests using cogent3" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="../testing/index.html" class="btn btn-neutral float-right" title="10. Introduction to Testing in Python" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
