deploy: a7bb9d923007d1c1b9760c07937e5c7d614af73c

--- a/seqcomp/pssm.html
+++ b/seqcomp/pssm.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>6.11. Position Specific Scoring Matrices (PSSMs) &mdash; Topics in Bioinformatics 2021.09.30 documentation</title><link rel="stylesheet" href="../_static/css/theme.css" type="text/css" />
+  <title>6.11. Position Specific Scoring Matrices (PSSMs) &mdash; Topics in Bioinformatics 2021.10.04 documentation</title><link rel="stylesheet" href="../_static/css/theme.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="../_static/graphviz.css" type="text/css" />
       <link rel="stylesheet" href="../_static/jupyter-sphinx.css" type="text/css" />
@@ -329,10 +329,10 @@ for seq_index in sequence
 <th>Base \ Position</th><th>0</th><th>1</th><th>2</th><th>3</th>
 </thead>
 <tbody>
-<tr><td><span class="c3col_left">T</span></td><td><span class="c3col_left">-0.263</span></td><td><span class="c3col_left">1.807</span></td><td><span class="c3col_left">-1.000</span></td><td><span class="c3col_left">1.115</span></td></tr>
-<tr><td><span class="c3col_left">C</span></td><td><span class="c3col_left">-2.585</span></td><td><span class="c3col_left">-2.585</span></td><td><span class="c3col_left">-2.585</span></td><td><span class="c3col_left">-2.585</span></td></tr>
-<tr><td><span class="c3col_left">A</span></td><td><span class="c3col_left">1.503</span></td><td><span class="c3col_left">-2.585</span></td><td><span class="c3col_left">1.663</span></td><td><span class="c3col_left">0.585</span></td></tr>
-<tr><td><span class="c3col_left">G</span></td><td><span class="c3col_left">-2.585</span></td><td><span class="c3col_left">-2.585</span></td><td><span class="c3col_left">-2.585</span></td><td><span class="c3col_left">-2.585</span></td></tr>
+<tr><td><span class="c3col_left">T</span></td><td><span class="c3col_right">-0.263</span></td><td><span class="c3col_right">1.807</span></td><td><span class="c3col_right">-1.000</span></td><td><span class="c3col_right">1.115</span></td></tr>
+<tr><td><span class="c3col_left">C</span></td><td><span class="c3col_right">-2.585</span></td><td><span class="c3col_right">-2.585</span></td><td><span class="c3col_right">-2.585</span></td><td><span class="c3col_right">-2.585</span></td></tr>
+<tr><td><span class="c3col_left">A</span></td><td><span class="c3col_right">1.503</span></td><td><span class="c3col_right">-2.585</span></td><td><span class="c3col_right">1.663</span></td><td><span class="c3col_right">0.585</span></td></tr>
+<tr><td><span class="c3col_left">G</span></td><td><span class="c3col_right">-2.585</span></td><td><span class="c3col_right">-2.585</span></td><td><span class="c3col_right">-2.585</span></td><td><span class="c3col_right">-2.585</span></td></tr>
 </tbody>
 </table>
 <p>
