deploy: c030fe09ec4b62850fdd596cc86008cc77d762f4

--- a/cogent3/apps.html
+++ b/cogent3/apps.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>8.8. Overview of cogent3 apps &mdash; Topics in Bioinformatics 2021.10.08 documentation</title><link rel="stylesheet" href="../_static/css/theme.css" type="text/css" />
+  <title>8.8. Overview of cogent3 apps &mdash; Topics in Bioinformatics 2021.10.15 documentation</title><link rel="stylesheet" href="../_static/css/theme.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="../_static/graphviz.css" type="text/css" />
       <link rel="stylesheet" href="../_static/jupyter-sphinx.css" type="text/css" />
@@ -182,7 +182,7 @@
     </span></td><td><span class="c3col_left">aligned</span></td><td><span class="c3col_left">pairwise_distances, tabular, serialisable</span></td><td><span class="c3col_left">ArrayAlignment, Alignment</span></td></tr>
 <tr><td><span class="c3col_left">cogent3.app.evo</span></td><td><span class="c3col_left">ancestral_states</span></td><td><span class="c3col_left">True</span></td><td><span class="c3col_left">Computes ancestral state probabilities from a model result. Returns a dict
     with a DictArray for each node.</span></td><td><span class="c3col_left">model_result</span></td><td><span class="c3col_left">result, tabular_result, serialisable</span></td><td><span class="c3col_left">model_result</span></td></tr>
-<tr><td><span class="c3col_left">cogent3.app.evo</span></td><td><span class="c3col_left">bootstrap</span></td><td><span class="c3col_left">True</span></td><td><span class="c3col_left">Parametric bootstrap for a provided hypothesis. Returns a bootstrap_result.</span></td><td><span class="c3col_left">aligned</span></td><td><span class="c3col_left">result, bootstrap_result, serialisable</span></td><td><span class="c3col_left">ArrayAlignment, Alignment</span></td></tr>
+<tr><td><span class="c3col_left">cogent3.app.evo</span></td><td><span class="c3col_left">bootstrap</span></td><td><span class="c3col_left">True</span></td><td><span class="c3col_left">Parametric bootstrap for a provided hypothesis. Returns a bootstrap_result.</span></td><td><span class="c3col_left">aligned, serialisable</span></td><td><span class="c3col_left">result, bootstrap_result, serialisable</span></td><td><span class="c3col_left">ArrayAlignment, Alignment</span></td></tr>
 </tbody>
 </table>
 <p>Top 5 rows from
