--- a/genindex.html
+++ b/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; Topics in Bioinformatics 2021.10.08 documentation</title><link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
+  <title>Index &mdash; Topics in Bioinformatics 2021.10.15 documentation</title><link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/graphviz.css" type="text/css" />
       <link rel="stylesheet" href="_static/jupyter-sphinx.css" type="text/css" />
@@ -407,7 +407,7 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="molevol/glossary.html#index-0">branch length</a>
+      <li><a href="molevol/glossary.html#index-10">branch length</a>
 
       <ul>
         <li><a href="cogent3/using_models.html#index-0">expected number of substitutions</a>, <a href="molevol/max_likelihood.html#index-2">[1]</a>, <a href="molevol/substitution_models.html#index-5">[2]</a>
@@ -675,8 +675,7 @@
         <li><a href="python/misc.html#index-1">string, encode</a>
 </li>
       </ul></li>
-      <li>
-    degrees of freedom
+      <li><a href="molevol/glossary.html#index-16">degrees of freedom</a>
 
       <ul>
         <li><a href="molevol/hypothesis_testing.html#index-0">df hypothesis testing</a>
@@ -689,8 +688,7 @@
         <li><a href="molevol/mutation.html#index-0">mutation types</a>
 </li>
       </ul></li>
-      <li>
-    df
+      <li><a href="molevol/glossary.html#index-17">df</a>
 
       <ul>
         <li><a href="molevol/hypothesis_testing.html#index-0">hypothesis testing, degrees of freedom</a>
@@ -811,6 +809,8 @@
         <li><a href="python/misc.html#index-0">str</a>
 </li>
       </ul></li>
+      <li><a href="molevol/glossary.html#index-0">estimate</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li>
@@ -913,6 +913,8 @@
         <li><a href="cogent3/tables.html#index-4">table cogent3</a>
 </li>
       </ul></li>
+      <li><a href="molevol/glossary.html#index-1">fit a model</a>
+</li>
       <li>
     float
 
@@ -936,6 +938,8 @@
         <li><a href="python/types.html#index-11">str</a>
 </li>
       </ul></li>
+      <li><a href="molevol/glossary.html#index-2">free parameter</a>
+</li>
       <li>
     frozenset
 
@@ -1222,6 +1226,8 @@
       </ul></li>
       <li><a href="python/lists.html#index-1">len()</a>
 </li>
+      <li><a href="molevol/glossary.html#index-12">Likelihood ratio</a>
+</li>
       <li>
     likelihood ratio
 
@@ -1315,8 +1321,7 @@
         <li><a href="python/logic.html#index-4">while</a>
 </li>
       </ul></li>
-      <li>
-    LR
+      <li><a href="molevol/glossary.html#index-13">LR</a>
 
       <ul>
         <li><a href="molevol/hypothesis_testing.html#index-0">hypothesis testing, likelihood ratio</a>
@@ -1422,6 +1427,10 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="molevol/glossary.html#index-3">maximum likelihood</a>
+</li>
+      <li><a href="molevol/glossary.html#index-4">maximum likelihood estimators (MLEs)</a>
+</li>
       <li>
     mean
 
@@ -1565,8 +1574,7 @@
         <li><a href="python/numpy.html#index-7">numpy</a>
 </li>
       </ul></li>
-      <li>
-    nfp
+      <li><a href="molevol/glossary.html#index-15">nfp</a>
 
       <ul>
         <li><a href="molevol/hypothesis_testing.html#index-0">hypothesis testing, number of free parameters</a>
@@ -1581,8 +1589,7 @@
       </ul></li>
       <li><a href="notation.html#index-0">notation</a>
 </li>
-      <li>
-    number of free parameters
+      <li><a href="molevol/glossary.html#index-14">number of free parameters</a>
 
       <ul>
         <li><a href="molevol/hypothesis_testing.html#index-0">nfp hypothesis testing</a>
@@ -1707,6 +1714,8 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="molevol/glossary.html#index-5">parameter</a>
+</li>
       <li>
     pass
 
@@ -1876,8 +1885,7 @@
         <li><a href="python/more_looping.html#index-3">looping</a>
 </li>
       </ul></li>
-      <li>
-    rate matrix
+      <li><a href="molevol/glossary.html#index-6">rate matrix</a>
 
       <ul>
         <li><a href="molevol/substitution_models.html#index-6">calibration</a>
@@ -1885,6 +1893,8 @@
         <li><a href="molevol/substitution_models.html#index-1">substitution model</a>
 </li>
       </ul></li>
+      <li><a href="molevol/glossary.html#index-8">rate parameter</a>
+</li>
       <li>
     raw
 
@@ -2011,6 +2021,8 @@
         <li><a href="python/sets.html#index-0">type</a>
 </li>
       </ul></li>
+      <li><a href="molevol/glossary.html#index-11">site</a>
+</li>
       <li><a href="python/indexing.html#index-1">slice</a>
 
       <ul>
@@ -2186,6 +2198,8 @@
       </ul></li>
       <li><a href="python/writing_functions.html#index-4">string literal</a>
 </li>
+      <li><a href="molevol/glossary.html#index-7">substitution matrix</a>
+</li>
       <li>
     substitution model
 
@@ -2352,6 +2366,8 @@
         <li><a href="molevol/mutation.html#index-1">point mutation</a>
 </li>
       </ul></li>
+      <li><a href="molevol/glossary.html#index-9">tree</a>
+</li>
       <li>
     True / False
 
