--- a/genindex.html
+++ b/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; Topics in Bioinformatics 2022.07.24 documentation</title><link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
+  <title>Index &mdash; Topics in Bioinformatics 2022.07.25 documentation</title><link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/graphviz.css" type="text/css" />
       <link rel="stylesheet" href="_static/jupyter-sphinx.css" type="text/css" />
@@ -167,7 +167,7 @@
     #
 
       <ul>
-        <li><a href="python/logic.html#index-8">comment</a>
+        <li><a href="python/logic.html#index-9">comment</a>
 </li>
       </ul></li>
       <li>
@@ -343,11 +343,15 @@
         <li><a href="python/iterators.html#index-3">keyword</a>
 </li>
       </ul></li>
-      <li><a href="python/how_to_write_a_program.html#index-0">assert</a>, <a href="python/misc.html#index-3">[1]</a>
+      <li><a href="python/how_to_write_a_program.html#index-0">assert</a>, <a href="python/misc.html#index-5">[1]</a>
 </li>
-      <li><a href="python/logic.html#index-6">assignment</a>, <a href="python/variables.html#index-1">[1]</a>
+      <li><a href="python/logic.html#index-7">assignment</a>, <a href="python/variables.html#index-1">[1]</a>
 
       <ul>
+        <li><a href="python/indexing.html#index-2">immutable</a>
+</li>
+        <li><a href="python/indexing.html#index-1">indexing, list</a>
+</li>
         <li><a href="python/numpy.html#index-9">numpy</a>
 </li>
       </ul></li>
@@ -388,6 +392,10 @@
     bool
 
       <ul>
+        <li><a href="python/logic.html#index-3">Falsy</a>
+</li>
+        <li><a href="python/logic.html#index-3">Truthy</a>
+</li>
         <li><a href="python/types.html#index-4">types</a>
 </li>
       </ul></li>
@@ -492,7 +500,7 @@
         <li><a href="python/files.html#index-3">files</a>
 </li>
       </ul></li>
-      <li><a href="python/indexing.html#index-4">codon</a>
+      <li><a href="python/indexing.html#index-6">codon</a>
 </li>
       <li>
     cogent3
@@ -552,16 +560,16 @@
     comment
 
       <ul>
-        <li><a href="python/logic.html#index-8">#</a>
+        <li><a href="python/logic.html#index-9">#</a>
 </li>
-        <li><a href="python/logic.html#index-8">comment lines</a>
+        <li><a href="python/logic.html#index-9">comment lines</a>
 </li>
       </ul></li>
       <li>
     comment lines
 
       <ul>
-        <li><a href="python/logic.html#index-8">comment</a>
+        <li><a href="python/logic.html#index-9">comment</a>
 </li>
       </ul></li>
       <li>
@@ -575,9 +583,9 @@
     comprehension
 
       <ul>
-        <li><a href="python/misc.html#index-4">dict</a>
+        <li><a href="python/misc.html#index-6">dict</a>
 </li>
-        <li><a href="python/misc.html#index-4">list</a>
+        <li><a href="python/misc.html#index-6">list</a>
 </li>
       </ul></li>
       <li>
@@ -628,7 +636,7 @@
         <li><a href="python/visualisation.html#index-0">plotly</a>
 </li>
       </ul></li>
-      <li><a href="python/misc.html#index-3">correctness</a>
+      <li><a href="python/misc.html#index-5">correctness</a>
 </li>
       <li>
     count
@@ -698,7 +706,7 @@
     dict
 
       <ul>
-        <li><a href="python/misc.html#index-4">comprehension</a>
+        <li><a href="python/misc.html#index-6">comprehension</a>
 </li>
         <li><a href="python/visualisation.html#index-2">plotly</a>
 </li>
@@ -799,7 +807,14 @@
     enumerate
 
       <ul>
-        <li><a href="python/logic.html#index-7">loops</a>
+        <li><a href="python/logic.html#index-8">loops</a>
+</li>
+      </ul></li>
+      <li>
+    errors
+
+      <ul>
+        <li><a href="python/interpreting_errors.html#index-1">Exceptions</a>
 </li>
       </ul></li>
       <li>
@@ -809,10 +824,10 @@
         <li><a href="python/misc.html#index-0">str</a>
 </li>
       </ul></li>
-      <li><a href="molevol/glossary.html#index-0">estimate</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="molevol/glossary.html#index-0">estimate</a>
+</li>
       <li>
     evaluation
 
@@ -824,6 +839,8 @@
     Exceptions
 
       <ul>
+        <li><a href="python/interpreting_errors.html#index-1">errors</a>
+</li>
         <li><a href="python/dictionaries.html#index-1">KeyError</a>
 </li>
       </ul></li>
@@ -882,6 +899,12 @@
         <li><a href="testing/index.html#index-0">test</a>
 </li>
       </ul></li>
+      <li><a href="python/misc.html#index-3">Falsy</a>
+
+      <ul>
+        <li><a href="python/logic.html#index-3">bool</a>
+</li>
+      </ul></li>
       <li>
     file path
 
@@ -928,7 +951,7 @@
     for
 
       <ul>
-        <li><a href="python/logic.html#index-5">loops</a>
+        <li><a href="python/logic.html#index-6">loops</a>
 </li>
       </ul></li>
       <li>
@@ -1053,7 +1076,11 @@
       <li><a href="python/types.html#index-1">Immutable</a>
 </li>
       <li><a href="python/functions.html#index-6">immutable</a>, <a href="python/types.html#index-9">[1]</a>
+
+      <ul>
+        <li><a href="python/indexing.html#index-2">assignment</a>
 </li>
+      </ul></li>
       <li><a href="python/import.html#index-0">import</a>
 </li>
       <li>
@@ -1087,9 +1114,13 @@
     indexing
 
       <ul>
+        <li><a href="python/indexing.html#index-1">list assignment</a>
+</li>
         <li><a href="python/numpy.html#index-5">numpy</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     insertion
 
@@ -1097,8 +1128,6 @@
         <li><a href="molevol/mutation.html#index-0">mutation types</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     insertion deletion
 
@@ -1240,7 +1269,9 @@
       <li><a href="python/lists.html#index-0">list</a>
 
       <ul>
-        <li><a href="python/misc.html#index-4">comprehension</a>
+        <li><a href="python/indexing.html#index-1">assignment indexing</a>
+</li>
+        <li><a href="python/misc.html#index-6">comprehension</a>
 </li>
         <li><a href="python/types.html#index-6">types collection objects</a>
 </li>
@@ -1273,10 +1304,10 @@
         <li><a href="version_control/index.html#index-9">version control</a>
 </li>
       </ul></li>
-      <li><a href="seqcomp/pssm.html#index-1">log-odds ratios</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="seqcomp/pssm.html#index-1">log-odds ratios</a>
+</li>
       <li>
     log2
 
@@ -1304,7 +1335,7 @@
         <li><a href="python/operators.html#index-2">or</a>
 </li>
       </ul></li>
-      <li><a href="python/logic.html#index-3">looping</a>
+      <li><a href="python/logic.html#index-4">looping</a>
 
       <ul>
         <li><a href="python/more_looping.html#index-3">range</a>
@@ -1314,13 +1345,13 @@
     loops
 
       <ul>
-        <li><a href="python/logic.html#index-7">enumerate</a>
+        <li><a href="python/logic.html#index-8">enumerate</a>
 </li>
-        <li><a href="python/logic.html#index-5">for</a>
+        <li><a href="python/logic.html#index-6">for</a>
 </li>
         <li><a href="python/more_looping.html#index-0">nested for loop</a>
 </li>
-        <li><a href="python/logic.html#index-4">while</a>
+        <li><a href="python/logic.html#index-5">while</a>
 </li>
       </ul></li>
       <li><a href="molevol/glossary.html#index-13">LR</a>
@@ -1447,7 +1478,7 @@
         <li><a href="version_control/index.html#index-11">version control</a>
 </li>
       </ul></li>
-      <li><a href="python/dictionaries.html#index-3">method chaining</a>, <a href="python/misc.html#index-6">[1]</a>, <a href="python/numpy.html#index-18">[2]</a>
+      <li><a href="python/dictionaries.html#index-3">method chaining</a>, <a href="python/misc.html#index-8">[1]</a>, <a href="python/numpy.html#index-18">[2]</a>
 </li>
       <li><a href="python/functions.html#index-4">methods</a>
 </li>
@@ -1552,7 +1583,7 @@
     negative
 
       <ul>
-        <li><a href="python/indexing.html#index-3">slice</a>
+        <li><a href="python/indexing.html#index-5">slice</a>
 </li>
       </ul></li>
       <li>
@@ -2025,18 +2056,18 @@
       </ul></li>
       <li><a href="molevol/glossary.html#index-11">site</a>
 </li>
-      <li><a href="python/indexing.html#index-1">slice</a>
+      <li><a href="python/indexing.html#index-3">slice</a>
 
       <ul>
         <li><a href="cogent3/sequences.html#index-0">cogent3 Alignment</a>
 </li>
-        <li><a href="python/indexing.html#index-3">negative</a>
+        <li><a href="python/indexing.html#index-5">negative</a>
 </li>
-        <li><a href="python/indexing.html#index-2">start</a>
+        <li><a href="python/indexing.html#index-4">start</a>
 </li>
-        <li><a href="python/indexing.html#index-2">stop</a>
+        <li><a href="python/indexing.html#index-4">stop</a>
 </li>
-        <li><a href="cogent3/sequences.html#index-0">stride</a>, <a href="python/indexing.html#index-2">[1]</a>
+        <li><a href="cogent3/sequences.html#index-0">stride</a>, <a href="python/indexing.html#index-4">[1]</a>
 </li>
       </ul></li>
       <li>
@@ -2073,7 +2104,7 @@
     start
 
       <ul>
-        <li><a href="python/indexing.html#index-2">slice</a>
+        <li><a href="python/indexing.html#index-4">slice</a>
 </li>
       </ul></li>
       <li>
@@ -2133,7 +2164,7 @@
     stop
 
       <ul>
-        <li><a href="python/indexing.html#index-2">slice</a>
+        <li><a href="python/indexing.html#index-4">slice</a>
 </li>
       </ul></li>
       <li>
@@ -2165,7 +2196,7 @@
     stride
 
       <ul>
-        <li><a href="cogent3/sequences.html#index-0">slice</a>, <a href="python/indexing.html#index-2">[1]</a>
+        <li><a href="cogent3/sequences.html#index-0">slice</a>, <a href="python/indexing.html#index-4">[1]</a>
 </li>
       </ul></li>
       <li>
@@ -2281,7 +2312,7 @@
         <li><a href="testing/index.html#index-0">pass</a>
 </li>
       </ul></li>
-      <li><a href="python/misc.html#index-3">testing</a>
+      <li><a href="python/misc.html#index-5">testing</a>
 </li>
       <li>
     TF
@@ -2377,6 +2408,12 @@
         <li><a href="python/types.html#index-4">types</a>
 </li>
       </ul></li>
+      <li><a href="python/misc.html#index-4">Truthy</a>
+
+      <ul>
+        <li><a href="python/logic.html#index-3">bool</a>
+</li>
+      </ul></li>
       <li>
     TSS
 
@@ -2465,7 +2502,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="python/variables.html#index-1">unpacking</a>
 </li>
-      <li><a href="cogent3/tables.html#index-2">unzip</a>, <a href="python/misc.html#index-5">[1]</a>
+      <li><a href="cogent3/tables.html#index-2">unzip</a>, <a href="python/misc.html#index-7">[1]</a>
 </li>
   </ul></td>
 </tr></table>
@@ -2553,7 +2590,7 @@
     while
 
       <ul>
-        <li><a href="python/logic.html#index-4">loops</a>
+        <li><a href="python/logic.html#index-5">loops</a>
 </li>
       </ul></li>
       <li>
@@ -2615,7 +2652,7 @@
 <h2 id="Z">Z</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="python/misc.html#index-5">zip</a>
+      <li><a href="python/misc.html#index-7">zip</a>
 
       <ul>
         <li><a href="cogent3/tables.html#index-1">builtin function</a>
