--- a/molevol/index.html
+++ b/molevol/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>7. Molecular Evolution &mdash; Topics in Bioinformatics 2022.08.11 documentation</title><link rel="stylesheet" href="../_static/css/theme.css" type="text/css" />
+  <title>7. Molecular Evolution &mdash; Topics in Bioinformatics 2022.08.16 documentation</title><link rel="stylesheet" href="../_static/css/theme.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="../_static/graphviz.css" type="text/css" />
       <link rel="stylesheet" href="../_static/jupyter-sphinx.css" type="text/css" />
@@ -29,7 +29,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="7.1. What is molecular evolution?" href="intro.html" />
-    <link rel="prev" title="6.17. Global Pairwise Alignment Using Dynamic Programming" href="../seqcomp/pairwise_alignment.html" /> 
+    <link rel="prev" title="6.18. Refresher on statistical inference" href="../seqcomp/statistics.html" /> 
 </head>
 
 <body class="wy-body-for-nav"> 
@@ -149,7 +149,7 @@
            </div>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="../seqcomp/pairwise_alignment.html" class="btn btn-neutral float-left" title="6.17. Global Pairwise Alignment Using Dynamic Programming" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="../seqcomp/statistics.html" class="btn btn-neutral float-left" title="6.18. Refresher on statistical inference" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="intro.html" class="btn btn-neutral float-right" title="7.1. What is molecular evolution?" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
