deploy: 34d28dec36047f9898c47c51d43faf8667d6b507

--- a/genindex.html
+++ b/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; Topics in Bioinformatics 2023.04.21 documentation</title>
+  <title>Index &mdash; Topics in Bioinformatics 2023.05.01 documentation</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
       <link rel="stylesheet" href="_static/graphviz.css" type="text/css" />
@@ -340,6 +340,13 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    app_help()
+
+      <ul>
+        <li><a href="cogent3/apps.html#index-0">help()</a>
+</li>
+      </ul></li>
       <li>
     arguments
 
@@ -1058,7 +1065,11 @@
 </li>
       </ul></li>
       <li><a href="python/dir_help.html#index-1">help()</a>
+
+      <ul>
+        <li><a href="cogent3/apps.html#index-0">app_help()</a>
 </li>
+      </ul></li>
       <li>
     hints
 
