deploy: 3b3f26307ce7e22505fcc42acb0c994ba7f3fbde

--- a/cogent3/apps.html
+++ b/cogent3/apps.html
@@ -41,7 +41,7 @@
 <link rel="preload" as="script" href="../_static/scripts/pydata-sphinx-theme.js?digest=8d27b9dea8ad943066ae" />
   <script src="../_static/vendor/fontawesome/6.5.1/js/all.min.js?digest=8d27b9dea8ad943066ae"></script>
 
-    <script src="../_static/documentation_options.js?v=abcf21f0"></script>
+    <script src="../_static/documentation_options.js?v=f1ef3101"></script>
     <script src="../_static/doctools.js?v=888ff710"></script>
     <script src="../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="../_static/thebelab-helper.js"></script>
@@ -567,7 +567,7 @@ ArrayAlignment, Alignment
 
 Output type
 -----------
-SerialisableType, model_result
+model_result, SerialisableType
 </pre></div>
 </div>
 </div>
