--- a/cogent3/apps.html
+++ b/cogent3/apps.html
@@ -41,7 +41,7 @@
 <link rel="preload" as="script" href="../_static/scripts/pydata-sphinx-theme.js?digest=8d27b9dea8ad943066ae" />
   <script src="../_static/vendor/fontawesome/6.5.1/js/all.min.js?digest=8d27b9dea8ad943066ae"></script>
 
-    <script src="../_static/documentation_options.js?v=f1ef3101"></script>
+    <script src="../_static/documentation_options.js?v=738e33b6"></script>
     <script src="../_static/doctools.js?v=888ff710"></script>
     <script src="../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="../_static/thebelab-helper.js"></script>
@@ -563,11 +563,11 @@ the result object has a separate entry for each codon position.
 
 Input type
 ----------
-ArrayAlignment, Alignment
+Alignment, ArrayAlignment
 
 Output type
 -----------
-model_result, SerialisableType
+SerialisableType, model_result
 </pre></div>
 </div>
 </div>
