deploy: 08dff3e9a6864a72d281be51032663e6293e5768

--- a/cogent3/apps.html
+++ b/cogent3/apps.html
@@ -563,11 +563,11 @@ the result object has a separate entry for each codon position.
 
 Input type
 ----------
-Alignment, ArrayAlignment
+ArrayAlignment, Alignment
 
 Output type
 -----------
-SerialisableType, model_result
+model_result, SerialisableType
 </pre></div>
 </div>
 </div>
